# GCOPTER

./: .gitmodules
gcopter/: CMakeLists.txt
gcopter/config/: global_planning.rviz  global_planning_bubble.yaml
gcopter/include/corridor_gen/include/: corridor_gen.h
gcopter/include/corridor_gen/src/: corridor_gen.cpp
gcopter/include/gcopter/: gcopter.hpp  gcopter_bubble.hpp  minco.hpp
gcopter/include/misc/: visualizer.hpp
gcopter/launch/: global_planning.launch  global_planning_bubble.launch
gcopter/src/: global_planning_bubble.cpp
